--- a/package.json
+++ b/package.json
@@ -5,12 +5,23 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test",
+    "lint": "nx lint"
   },
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.7",
     "@nrwl/next": "13.4.3",
     "core-js": "^3.6.5",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
