--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "htmlWhitespaceSensitivity": "ignore",
   "semi": true,
   "bracketSpacing": true,
+  "trailingComma": "all",
   "endOfLine": "auto"
 }
