--- a/package.json
+++ b/package.json
@@ -14,13 +14,20 @@
       "pre-commit": "lint-staged"
     }
   },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,html}": [
+      "yarn format --uncommitted"
+    ],
+    "*.@(ts|tsx)": [
+      "npm run lint"
+    ]
+  },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
     "@nrwl/next": "13.4.3",
     "core-js": "^3.6.5",
-    "husky": "^7.0.4",
     "lint-staged": "^12.1.6",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -56,6 +63,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
+    "husky": "^7.0.4",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
     "react-test-renderer": "17.0.2",
