--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "lint": "nx lint"
+    "lint": "nx lint",
+    "prepare": "husky install"
   },
   "private": true,
   "husky": {
@@ -19,13 +20,15 @@
       "yarn format --uncommitted"
     ],
     "*.@(ts|tsx)": [
-      "npm run lint"
+      "npm run lint",
+      "npm run test"
     ]
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
     "@nrwl/next": "13.4.3",
     "core-js": "^3.6.5",
     "lint-staged": "^12.1.6",
