--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nrwl/workspace": "13.4.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@typechain/ethers-v5": "^8.0.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
