--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "nx build",
     "test": "nx test",
     "lint": "nx lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:fe": "nx run ew-crowdfunding:test",
+    "lint:fe": "nx run ew-crowdfunding:lint",
+    "build:fe": "nx run ew-crowdfunding:build",
+    "ci:e2e:fe": "nx e2e ew-crowdfunding-e2e --headless"
   },
   "private": true,
   "husky": {
