--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
