--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@mui/styles": "^5.2.3",
     "@nrwl/next": "13.4.3",
     "core-js": "^3.6.5",
+    "iam-client-lib": "^4.0.0-alpha.25",
     "lint-staged": "^12.1.6",
+    "nats.ws": "^1.5.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
