--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@engie-solar-crowdfunding/ew-crowdfunding/web3-client": ["libs/ew-crowdfunding/web3-client/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
