--- a/libs/ew-crowdfunding/proxy-contracts/package.json
+++ b/libs/ew-crowdfunding/proxy-contracts/package.json
@@ -32,6 +32,7 @@
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solidity-coverage": "^0.7.17",
-    "standard": "^16.0.3"
+    "standard": "^16.0.3",
+    "ts-node": "^10.4.0"
   }
 }
