--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/styles": "^5.2.3",
     "@nrwl/next": "13.4.3",
     "core-js": "^3.6.5",
+    "hardhat": "^2.8.2",
     "lint-staged": "^12.1.6",
     "next": "12.0.7",
     "react": "17.0.2",
