ci: set nx to nocloud

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,33 +3,7 @@ on:
   pull_request:
 
 jobs:
-  install_packages:
-    name: Warm-up packages
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: 14.x
-          registry-url: https://registry.npmjs.org/
-      - name: Install nx
-        run: npm install -g nx
-      - name: Install NX Linux
-        run: npm i @next/swc-linux-x64-gnu --no-save
-      - name: Cache node modules
-        uses: actions/cache@v2
-        env:
-          cache-name: fe-node-modules
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
   sol_tests:
-    needs:
-      - install_packages
     name: Sol tests
     runs-on: ubuntu-latest
     steps:
@@ -37,8 +11,6 @@ jobs:
         with:
           fetch-depth: 0
   fe_e2e_tests:
-    needs:
-      - install_packages
     name: Frontend E2E tests
     runs-on: ubuntu-latest
     steps:
@@ -49,9 +21,11 @@ jobs:
         with:
           node-version: 14.x
           registry-url: https://registry.npmjs.org/
+      - name: Update NPM
+        run: npm i -g npm@latest
       - name: Install nx
         run: npm install -g nx
-      - name: Install NX Linux
+      - name: Install Linux SWC
         run: npm i @next/swc-linux-x64-gnu --no-save
       - name: Cache node modules
         uses: actions/cache@v2
@@ -67,8 +41,6 @@ jobs:
       - name: Run tests
         run: npm run ci:e2e:fe
   fe_tests:
-    needs:
-      - install_packages
     name: Frontend tests
     runs-on: ubuntu-latest
     steps:
@@ -79,10 +51,12 @@ jobs:
         with:
           node-version: 14.x
           registry-url: https://registry.npmjs.org/
+      - name: Update NPM
+        run: npm i -g npm@latest
       - name: Install nx
         run: npm install -g nx
-      - name: Install NX Linux
-        run: npm i @next/swc-linux-x64-gnu --no-save
+#      - name: Install Linux SWC
+#        run: npm i @next/swc-linux-x64-gnu --no-save
       - name: Cache node modules
         uses: actions/cache@v2
         env:
@@ -93,7 +67,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       - name: Lint
         run: npm run lint:fe
       - name: Build
