--- a/libs/ew-crowdfunding/smart-contracts/project.json
+++ b/libs/ew-crowdfunding/smart-contracts/project.json
@@ -2,13 +2,12 @@
   "root": "libs/ew-crowdfunding/smart-contracts",
   "sourceRoot": "libs/ew-crowdfunding/smart-contracts/src",
   "projectType": "library",
-  "tags": [],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/ew-crowdfunding/smart-contracts/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/ew-crowdfunding/smart-contracts/**/*.ts"]
       }
     },
     "test": {
@@ -19,5 +18,6 @@
         "passWithNoTests": true
       }
     }
-  }
+  },
+  "tags": []
 }
