--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@nrwl/eslint-plugin-nx": "13.4.3",
     "@nrwl/jest": "13.4.3",
     "@nrwl/linter": "13.4.3",
+    "@nrwl/node": "^13.4.4",
     "@nrwl/react": "13.4.3",
     "@nrwl/tao": "13.4.3",
     "@nrwl/web": "13.4.3",
