Feat/ds 153/Setup contract project (#1)
* feat: setup contract repo and adding proxy contract design

* feat: updating staking tests

* feat: adding ts-node

* feat: setting up a simple smartContract directory

* chore: update hardhat config

* docs: update README install instructions

* ci: install swc linux without save

* fix: update npm version

* ci: set nx to nocloud

* feat: setting up hardhat typescript repo

* feat: update hardhat testing environment

Co-authored-by: Krzysztof Szostak <christopher.szostak@energyweb.org>
Co-authored-by: Florin Georgescu <flo_georgescu@hotmail.com>

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,12 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@engie-solar-crowdfunding/ew-crowdfunding/proxy-contracts": [
+        "libs/ew-crowdfunding/proxy-contracts/src/index.ts"
+      ],
+      "@engie-solar-crowdfunding/ew-crowdfunding/smart-contracts": [
+        "libs/ew-crowdfunding/smart-contracts/src/index.ts"
+      ],
       "@engie-solar-crowdfunding/ew-crowdfunding/web3-client": ["libs/ew-crowdfunding/web3-client/src/index.ts"]
     }
   },
