--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prepare": "husky install",
     "test:fe": "nx run ew-crowdfunding:test",
     "lint:fe": "nx run ew-crowdfunding:lint",
-    "build:fe": "nx run ew-crowdfunding:build",
+    "build:fe": "nx run ew-crowdfunding:build --runner=no-cloud",
     "ci:e2e:fe": "nx e2e ew-crowdfunding-e2e --headless"
   },
   "private": true,
@@ -41,6 +41,7 @@
     "base64url": "^3.0.1",
     "core-js": "^3.6.5",
     "ethers": "^5.5.3",
+    "hardhat": "^2.8.2",
     "lint-staged": "^12.1.6",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -54,12 +55,14 @@
     "@nrwl/eslint-plugin-nx": "13.4.3",
     "@nrwl/jest": "13.4.3",
     "@nrwl/linter": "13.4.3",
+    "@nrwl/node": "^13.4.4",
     "@nrwl/react": "13.4.3",
     "@nrwl/tao": "13.4.3",
     "@nrwl/web": "13.4.3",
     "@nrwl/workspace": "13.4.3",
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
+    "@typechain/ethers-v5": "^8.0.5",
     "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
