Added Modals provider

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@ew-did-registry/did": "^0.6.3-alpha.367.0",
     "@ew-did-registry/did-ethr-resolver": "^0.6.3-alpha.367.0",
     "@metamask/detect-provider": "^1.2.0",
+    "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "@nrwl/next": "13.4.3",
