--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -6,6 +6,7 @@ NEXT_PUBLIC_UI_BASE_URL=http://localhost:4200
 NEXT_PUBLIC_ISSUER_ADDRESS=
 
 NEXT_PUBLIC_CHAIN_ID=73799
+NEXT_PUBLIC_NETWORK_NAME="Volta Chain"
 NEXT_PUBLIC_RPC_URL=
 NEXT_PUBLIC_CACHE_SERVER=
 NEXT_PUBLIC_IDENTITY_CONTRACT_ADDRESS=
