--- a/libs/ew-crowdfunding/proxy-contracts/package.json
+++ b/libs/ew-crowdfunding/proxy-contracts/package.json
@@ -23,6 +23,7 @@
     "@typechain/ethers-v5": "^8.0.5",
     "@typechain/hardhat": "^3.1.0",
     "chai": "^4.3.4",
+    "date-and-time": "^2.1.0",
     "dotenv": "^8.6.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.1",
