Fixing Cache client 401 issue

--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -1,13 +1,11 @@
 MODE=dev
 
-NEXT_PUBLIC_WEB3=https://volta-rpc.energyweb.org/
 NEXT_PUBLIC_UI_BASE_URL=http://localhost:4200
-
-NEXT_PUBLIC_ISSUER_ADDRESS=
-
 NEXT_PUBLIC_CHAIN_ID=73799
-NEXT_PUBLIC_NETWORK_NAME="Volta Chain"
-NEXT_PUBLIC_RPC_URL=
-NEXT_PUBLIC_CACHE_SERVER=
-NEXT_PUBLIC_IDENTITY_CONTRACT_ADDRESS=
-NEXT_PUBLIC_ORG_NAMESPACE=
+NEXT_PUBLIC_RPC_URL=https://volta-rpc.energyweb.org
+NEXT_PUBLIC_CACHE_SERVER=https://identitycache-dev.energyweb.org/v1
+NEXT_PUBLIC_ORG_NAMESPACE="iam.ewc"
+NEXT_PUBLIC_NETWORK_NAME="EnergyWeb Volta Chain"
+NEXT_PUBLIC_CURRENCY_NAME="Volta Token"
+NEXT_PUBLIC_CURRENCY_SYMBOL="VT"
+NEXT_PUBLIC_PATRON_ROLE="email.roles.verification.apps.energyweb.iam.ewc"
