--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -17,13 +17,16 @@ jobs:
     runs-on: ubuntu-latest
     env:
         MODE: CI
-        NEXT_PUBLIC_WEB3: https://volta-rpc.energyweb.org
         NEXT_PUBLIC_UI_BASE_URL: https://esc-dev.energyweb.org
-        NEXT_PUBLIC_CHAIN_ID: 73799
-        NEXT_PUBLIC_NETWORK_NAME: Volta Chain
-        NEXT_PUBLIC_RPC_URL: https://volta-rpc.energyweb.org
-        NEXT_PUBLIC_CACHE_SERVER: https://volta-identitycache.energyweb.org
+        NEXT_PUBLIC_CHAIN_ID: 246
+        NEXT_PUBLIC_RPC_URL: https://rpc.energyweb.org/
+        NEXT_PUBLIC_CACHE_SERVER: https://identitycache.energyweb.org/v1
         NEXT_PUBLIC_ORG_NAMESPACE: iam.ewc
+        NEXT_PUBLIC_NETWORK_NAME: EWC
+        NEXT_PUBLIC_CURRENCY_NAME: EWT
+        NEXT_PUBLIC_CURRENCY_SYMBOL: EWT
+        NEXT_PUBLIC_PATRON_ROLE: email.roles.verification.apps.energyweb.auth.ewc
+
     steps:
       - name: Get GHA environment name
         id: env_vars # @TODO - consider production deployments?
