--- a/libs/ew-crowdfunding/web3-client/tsconfig.json
+++ b/libs/ew-crowdfunding/web3-client/tsconfig.json
@@ -15,6 +15,8 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "strictPropertyInitialization": false,
+    "suppressImplicitAnyIndexErrors": true,
   }
 }
