feat: unstaking before start

--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "scripts": {
     "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
     "test:volta": "npx hardhat test --network volta"
   },
   "devDependencies": {
