Feat/ds 157/unstake before start (#15)
* feat: adding init function

* fix: checking deposit before returning

* fix: checking staking status before removingStaker

* fix: checking staking status before withdrawal

* feat: init contract and setting deposit and withdraw

* fix: fixing weeks duration on init function to set end date to 1 year after start

* feat: enable JSON file resolution

* feat: setup tests

* chore: removing example test

* chore: cleaning unused variable

* fix: setting endDate manually

* fix: update endDate param on event

* feat: setting dateHandler to set end and start dates

* feat: teaking time to handle block delay in block.timestamp

* cleanup

* fix: defining event in stakingFacet and add 10 seconds delays to signup date

* fix: removing ganache network

* feat: handling date-and-time

* fix: fixing testing environment to remove ganache dependency

* feat: rejects staking on uninitialized contract

* feat: testing initialized modifier

* feat: prevent staking on uninitialized contract

* chore: update test label

* chore: diamond tests

* feat: setting and checking hardCap and limit

* feat: adding tests to check limits

* chore: correcting typos in tests labels

* feat: adding tests on initialization limits

* feat: adding subtraction on dates and fixes now function

* fix: update unstaking condiion

* feat: testing staking on time limits

* feat: adding substraction function on dateHandler

* feat: adding getNextDay function to dateHandler

* feat: setting signup period

* feat: adding tests for signup period

* build: remove proxy-contracts

* feat: unstaking before start

* chore: removing hardcoded signup period check on stake

* fix: allow staking against signup period

* chore: testing stakes/unstakes with bigger value

* chore: removing duplicate function

* chore: update unstake function name and initialize test label

* feat: adding partial wit

--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -2,6 +2,7 @@
   "name": "hardhat-project",
   "scripts": {
     "test": "npx hardhat test",
+    "compile": "npx hardhat compile",
     "test:volta": "npx hardhat test --network volta"
   },
   "devDependencies": {
@@ -11,6 +12,7 @@
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.0",
+    "@types/luxon": "^2.0.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.41",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -28,6 +30,7 @@
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
     "hardhat-gas-reporter": "^1.0.7",
+    "luxon": "^2.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "solhint": "^3.3.6",
