Added custom inputs validation

--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -26,6 +26,12 @@ jobs:
         NEXT_PUBLIC_CURRENCY_NAME: EWT
         NEXT_PUBLIC_CURRENCY_SYMBOL: EWT
         NEXT_PUBLIC_PATRON_ROLE: email.roles.verification.apps.energyweb.auth.ewc
+        NEXT_PUBLIC_TOKEN_LIMIT: 200
+        NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT: 10000
+        NEXT_PUBLIC_INTEREST_RATE: 10%
+        NEXT_PUBLIC_CONTRIBUTION_DEADLINE: "2022-04-16"
+        NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED: "2022-04-17"
+        NEXT_PUBLIC_SOLAR_LOANS_MATURE: "2022-04-17"
 
     steps:
       - name: Get GHA environment name
