--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "@walletconnect/ethereum-provider": "^1.7.1",
     "base64url": "^3.0.1",
     "core-js": "^3.6.5",
+    "disposable-email-domains": "^1.0.59",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
     "lint-staged": "^12.1.6",
+    "luxon": "^2.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -69,6 +71,7 @@
     "@testing-library/react-hooks": "7.0.2",
     "@typechain/ethers-v5": "^8.0.5",
     "@types/jest": "27.0.2",
+    "@types/luxon": "^2.0.9",
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
