--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -9,3 +9,9 @@ NEXT_PUBLIC_NETWORK_NAME="EnergyWeb Volta Chain"
 NEXT_PUBLIC_CURRENCY_NAME="Volta Token"
 NEXT_PUBLIC_CURRENCY_SYMBOL="VT"
 NEXT_PUBLIC_PATRON_ROLE="email.roles.verification.apps.energyweb.iam.ewc"
+NEXT_PUBLIC_TOKEN_LIMIT=200
+NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT=10000
+NEXT_PUBLIC_INTEREST_RATE="10%"
+NEXT_PUBLIC_CONTRIBUTION_DEADLINE="2022-04-16"
+NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED="2022-04-17"
+NEXT_PUBLIC_SOLAR_LOANS_MATURE="2022-04-17"
