Improved metamask connection

--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -15,3 +15,4 @@ NEXT_PUBLIC_INTEREST_RATE="10%"
 NEXT_PUBLIC_CONTRIBUTION_DEADLINE="2022-04-16"
 NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED="2022-04-17"
 NEXT_PUBLIC_SOLAR_LOANS_MATURE="2022-04-17"
+NEXT_PUBLIC_BLOCK_EXPLORER_URL="https://volta-explorer.energyweb.org"
