--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -8,7 +8,7 @@ NEXT_PUBLIC_ORG_NAMESPACE="iam.ewc"
 NEXT_PUBLIC_NETWORK_NAME="EnergyWeb Volta Chain"
 NEXT_PUBLIC_CURRENCY_NAME="Volta Token"
 NEXT_PUBLIC_CURRENCY_SYMBOL="VT"
-NEXT_PUBLIC_PATRON_ROLE="engieapproved.roles.eea.apps.engietestvolta.iam.ewc"
+NEXT_PUBLIC_PATRON_ROLE="email.roles.eea.apps.florin.engietestvolta.iam.ewc"
 NEXT_PUBLIC_TOKEN_LIMIT=200
 NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT=10000
 NEXT_PUBLIC_INTEREST_RATE="10%"
