--- a/package.json
+++ b/package.json
@@ -45,17 +45,21 @@
     "disposable-email-domains": "^1.0.59",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
+    "iam-client-lib": "^4.0.0-alpha.12",
     "lint-staged": "^12.1.6",
     "luxon": "^2.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
+    "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "regenerator-runtime": "0.13.7",
+    "reselect": "^4.1.5",
     "tslib": "^2.0.0",
-    "yup": "^0.32.11",
-    "iam-client-lib": "^4.0.0-alpha.12"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@nrwl/cli": "13.4.3",
@@ -76,6 +80,7 @@
     "@types/node": "14.14.33",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "~5.3.0",
     "@typescript-eslint/parser": "~5.3.0",
     "babel-jest": "27.2.3",
