--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -32,8 +32,8 @@ jobs:
         NEXT_PUBLIC_CONTRIBUTION_DEADLINE: "2022-04-16"
         NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED: "2022-04-17"
         NEXT_PUBLIC_SOLAR_LOANS_MATURE: "2023-04-17"
-        NEXT_PUBLIC_BLOCK_EXPLORER_URL: https://volta-explorer.energyweb.org
-
+        NEXT_PUBLIC_BLOCK_EXPLORER_URL: https://explorer.energyweb.org
+  
     steps:
       - name: Get GHA environment name
         id: env_vars # @TODO - consider production deployments?
