Adjusting state actions

--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -2,7 +2,7 @@ MODE=dev
 
 NEXT_PUBLIC_UI_BASE_URL=http://localhost:4200
 NEXT_PUBLIC_CHAIN_ID=73799
-NEXT_PUBLIC_RPC_URL=https://volta-rpc.energyweb.org
+NEXT_PUBLIC_RPC_URL=https://volta-rpc-vkn5r5zx4ke71f9hcu0c.energyweb.org/
 NEXT_PUBLIC_CACHE_SERVER=https://identitycache-dev.energyweb.org/v1
 NEXT_PUBLIC_ORG_NAMESPACE="iam.ewc"
 NEXT_PUBLIC_NETWORK_NAME="EnergyWeb Volta Chain"
