--- a/libs/ew-crowdfunding/smart-contracts/.env.example
+++ b/libs/ew-crowdfunding/smart-contracts/.env.example
@@ -1,7 +1,7 @@
 EWC_CHAIN_ID = 246
 VOLTA_CHAIN_ID = 73799
 EWC_URL = https://rpc.energyweb.org
-VOLTA_URL = https://volta-rpc.energyweb.org
+VOLTA_URL = https://volta-rpc-vkn5r5zx4ke71f9hcu0c.energyweb.org/
 ETHERSCAN_API_KEY = ABC123ABC123ABC123ABC123ABC123ABC1
 DEPLOYER_PRIV_KEY = <YOUR EWC or VOLTA Account PRIVATE KEY>
 ROPSTEN_URL = https://eth-ropsten.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
