--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -9,6 +9,7 @@ NEXT_PUBLIC_NETWORK_NAME="EnergyWeb Volta Chain"
 NEXT_PUBLIC_CURRENCY_NAME="Volta Token"
 NEXT_PUBLIC_CURRENCY_SYMBOL="VT"
 NEXT_PUBLIC_PATRON_ROLE="email.roles.eea.apps.florin.engietestvolta.iam.ewc"
+NEXT_PUBLIC_PATRON_ROLE_VERSION=1
 NEXT_PUBLIC_TOKEN_LIMIT=200
 NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT=10000
 NEXT_PUBLIC_INTEREST_RATE="10%"
@@ -16,3 +17,4 @@ NEXT_PUBLIC_CONTRIBUTION_DEADLINE="2022-04-16"
 NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED="2022-04-17"
 NEXT_PUBLIC_SOLAR_LOANS_MATURE="2023-04-17"
 NEXT_PUBLIC_BLOCK_EXPLORER_URL="https://volta-explorer.energyweb.org"
+NEXT_PUBLIC_CLAIM_MANAGER_ADDRESS="0x5339adE9332A604A1c957B9bC1C6eee0Bcf7a031"
