--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     ]
   },
   "dependencies": {
+    "@dicebear/avatars": "^4.10.2",
+    "@dicebear/avatars-identicon-sprites": "^4.10.2",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@ew-did-registry/did": "^0.6.3-alpha.367.0",
