--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -15,6 +15,8 @@
     "@types/luxon": "^2.0.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "^12.20.41",
+    "@types/node-emoji": "^1.8.1",
+    "@types/prompt-sync": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "chai": "^4.3.4",
