--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -35,13 +35,13 @@ jobs:
         NEXT_PUBLIC_SOLAR_LOANS_MATURE: "2023-04-17"
         NEXT_PUBLIC_BLOCK_EXPLORER_URL: https://volta-explorer.energyweb.org
         NEXT_PUBLIC_CLAIM_MANAGER_ADDRESS: '0x5339adE9332A604A1c957B9bC1C6eee0Bcf7a031'
-  
+
     steps:
       - name: Get GHA environment name
         id: env_vars # @TODO - consider production deployments?
         run: |
           echo "Running on branch ${{ github.ref }}"
-          if [ "${{ github.ref }}" = "refs/heads/master" ]; then
+          if [ "${{ github.ref }}" = "refs/heads/develop" ]; then
             echo "::set-output name=aws_access_key_id::${{ secrets.DEV_AWS_ACCESS_KEY_ID }}"
             echo "::set-output name=aws_secret_key::${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}"
             echo "::set-output name=aws_region::${{ secrets.AWS_REGION }}"
