--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
