feat: setting deployment script

--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -34,6 +34,7 @@
     "luxon": "^2.3.0",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
+    "prompt-sync": "^4.2.0",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.17",
     "ts-node": "^10.4.0",
