--- a/package.json
+++ b/package.json
@@ -47,13 +47,14 @@
     "disposable-email-domains": "^1.0.59",
     "ethers": "^5.5.3",
     "hardhat": "^2.8.2",
-    "iam-client-lib": "^4.0.0-alpha.12",
+    "iam-client-lib": "^4.1.0-alpha.16",
     "lint-staged": "^12.1.6",
     "luxon": "^2.3.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.2",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-toastify": "^8.1.0",
     "redux-logger": "^3.0.6",
