--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -37,5 +37,8 @@
     "ts-node": "^10.4.0",
     "typechain": "^5.2.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.0"
   }
 }
