fix: preventing token loss on redeem before end

--- a/libs/ew-crowdfunding/smart-contracts/package.json
+++ b/libs/ew-crowdfunding/smart-contracts/package.json
@@ -3,6 +3,7 @@
   "scripts": {
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run scripts/deploy.ts",
     "test:volta": "npx hardhat test --network volta"
   },
   "devDependencies": {
