--- a/libs/ew-crowdfunding/smart-contracts/.env.example
+++ b/libs/ew-crowdfunding/smart-contracts/.env.example
@@ -7,6 +7,7 @@ DEPLOYER_PRIV_KEY = <YOUR EWC or VOLTA Account PRIVATE KEY>
 ROPSTEN_URL = https://eth-ropsten.alchemyapi.io/v2/<YOUR ALCHEMY KEY>
 TOKEN_NAME = 'Solar Token'
 TOKEN_SYMBOL = 'SLT'
+CONTRACT_NAME = 'Staking'
 CONTRACT_ADDRESS = <Provide contract address once it is deployed >
 EWC_CLAIM_MANAGER_ADDRESS = "0x23b026631A6f265d17CFee8aa6ced1B244f3920C"
 VOLTA_CLAIM_MANAGER_ADDRESS = "0xC3dD7ED75779b33F5Cfb709E0aB02b71fbFA3210"
