Updated pipeline variables

--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -41,11 +41,7 @@ jobs:
             echo "::set-output name=next_public_token_limit::200"
             echo "::set-output name=next_public_global_token_limit::10000"
             echo "::set-output name=next_public_interest_rate::10%"
-            echo "::set-output name=next_public_contribution_deadline::2022-04-16"
-            echo "::set-output name=next_public_solar_loans_distributed::2022-04-17"
-            echo "::set-output name=next_public_solar_loans_mature::2022-04-17"
             echo "::set-output name=next_public_block_explorer_url::https://volta-explorer.energyweb.org"
-            echo "::set-output name=next_public_claim_manager_address::0x5339adE9332A604A1c957B9bC1C6eee0Bcf7a031"
           elif [ "${{ github.ref }}" = "refs/heads/master" ]; then
             echo "::set-output name=aws_access_key_id::${{ secrets.PROD_AWS_ACCESS_KEY_ID }}"
             echo "::set-output name=aws_secret_key::${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}"
@@ -60,16 +56,12 @@ jobs:
             echo "::set-output name=next_public_network_name::EWC"
             echo "::set-output name=next_public_currency_name::EWT"
             echo "::set-output name=next_public_currency_symbol::EWC"
-            echo "::set-output name=next_public_patron_role::email.roles.eea.apps.florin.engietestvolta.iam.ewc"
+            echo "::set-output name=next_public_patron_role::eeaapproved.roles.eea.apps.engie.auth.ewc"
             echo "::set-output name=next_public_patron_role_version::1"
             echo "::set-output name=next_public_token_limit::200"
             echo "::set-output name=next_public_global_token_limit::10000"
             echo "::set-output name=next_public_interest_rate::10%"
-            echo "::set-output name=next_public_contribution_deadline::2022-04-16"
-            echo "::set-output name=next_public_solar_loans_distributed::2022-04-17"
-            echo "::set-output name=next_public_solar_loans_mature::2022-04-17"
             echo "::set-output name=next_public_block_explorer_url::https://explorer.energyweb.org"
-            echo "::set-output name=next_public_claim_manager_address::0x23b026631A6f265d17CFee8aa6ced1B244f3920C"
           else
             echo "Branch ${{ github.ref }} is not configured for deployment"
             exit 1
@@ -112,11 +104,7 @@ jobs:
           NEXT_PUBLIC_TOKEN_LIMIT: ${{ steps.env_vars.outputs.next_public_token_limit }}
           NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT: ${{ steps.env_vars.outputs.next_public_global_token_limit }}
           NEXT_PUBLIC_INTEREST_RATE: ${{ steps.env_vars.outputs.next_public_interest_rate }}
-          NEXT_PUBLIC_CONTRIBUTION_DEADLINE: ${{ steps.env_vars.outputs.next_public_contribution_deadline }}
-          NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED: ${{ steps.env_vars.outputs.next_public_solar_loans_distributed }}
-          NEXT_PUBLIC_SOLAR_LOANS_MATURE: ${{ steps.env_vars.outputs.next_public_solar_loans_mature }}
           NEXT_PUBLIC_BLOCK_EXPLORER_URL: ${{ steps.env_vars.outputs.next_public_block_explorer_url }}
-          NEXT_PUBLIC_CLAIM_MANAGER_ADDRESS: ${{ steps.env_vars.outputs.next_public_claim_manager_address }}
       - name: Ensure dist is present
         run: |
           test -d "dist/apps/ew-crowdfunding/exported" && echo OK || exit 1
