Lending design changes

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@metamask/detect-provider": "^1.2.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.72",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "@nrwl/next": "13.4.3",
