--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -17,3 +17,8 @@ NEXT_PUBLIC_CONTRIBUTION_DEADLINE="2022-04-16"
 NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED="2022-04-17"
 NEXT_PUBLIC_SOLAR_LOANS_MATURE="2023-04-17"
 NEXT_PUBLIC_BLOCK_EXPLORER_URL="https://volta-explorer.energyweb.org"
+
+NEXT_ACTIVATE_STAKING_DATE="2022-02-28 12:32"
+NEXT_CLOSE_STAKING_DATE="2022-03-08 12:32"
+NEXT_LOCK_STAKES_DATE= "2022-03-08 12:42"
+NEXT_RELEASE_REWARDS_DATE="2023-03-08 12:42"
