chore: added reward provider in env_example

--- a/libs/ew-crowdfunding/smart-contracts/.env.example
+++ b/libs/ew-crowdfunding/smart-contracts/.env.example
@@ -34,3 +34,4 @@ MIN_REQUIRED_STAKE = 500000000000000000
 
 ;CONTRIBUTION_LIMIT = 200 EWT
 CONTRIBUTION_LIMIT = 200000000000000000000
+REWARD_PROVIDER = <ADDRESS_OF_FUNDER>
