--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -42,11 +42,11 @@ jobs:
             echo "::set-output name=next_public_global_token_limit::10000"
             echo "::set-output name=next_public_interest_rate::10%"
             echo "::set-output name=next_public_block_explorer_url::https://volta-explorer.energyweb.org"
-            echo "::set-output name=next_public_activate_staking_date::2022-03-24 14:53"
-            echo "::set-output name=next_public_close_staking_date::2022-03-24 15:03"
-            echo "::set-output name=next_public_lock_stakes_date::2022-03-24 15:08"
-            echo "::set-output name=next_public_release_rewards_date::2022-03-24 15:20"
-            echo "::set-output name=next_public_full_stop_date::2022-03-24 15:30"
+            echo "::set-output name=next_public_activate_staking_date::2022-03-25T12:00"
+            echo "::set-output name=next_public_close_staking_date::2022-03-28T12:00"
+            echo "::set-output name=next_public_lock_stakes_date::2022-03-28T12:30"
+            echo "::set-output name=next_public_release_rewards_date::2022-03-28T16:00"
+            echo "::set-output name=next_public_full_stop_date::2022-03-29T12:00"
           elif [ "${{ github.ref }}" = "refs/heads/master" ]; then
             echo "::set-output name=aws_access_key_id::${{ secrets.PROD_AWS_ACCESS_KEY_ID }}"
             echo "::set-output name=aws_secret_key::${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}"
