--- a/apps/ew-crowdfunding/.env.example
+++ b/apps/ew-crowdfunding/.env.example
@@ -17,3 +17,9 @@ NEXT_PUBLIC_CONTRIBUTION_DEADLINE="2022-04-16"
 NEXT_PUBLIC_SOLAR_LOANS_DISTRIBUTED="2022-04-17"
 NEXT_PUBLIC_SOLAR_LOANS_MATURE="2023-04-17"
 NEXT_PUBLIC_BLOCK_EXPLORER_URL="https://volta-explorer.energyweb.org"
+
+NEXT_PUBLIC_ACTIVATE_STAKING_DATE="2022-03-25T12:00"
+NEXT_PUBLIC_CLOSE_STAKING_DATE="2022-03-28T12:00"
+NEXT_PUBLIC_LOCK_STAKES_DATE= "2022-03-28T12:30"
+NEXT_PUBLIC_RELEASE_REWARDS_DATE="2022-03-28T16:00"
+NEXT_PUBLIC_FULL_STOP_DATE="2022-03-29T12:00"
