--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to bucket
 
 on:
   push:
-    branches: ['develop', 'master', 'release', 'ci/deployments']
+    branches: ['develop', 'master', 'release', 'ci/deployments', 'DOI-1823_engie']
 jobs:
   cancel-previous:
     name: 'Cancel Previous Runs'
@@ -29,6 +29,31 @@ jobs:
             echo "::set-output name=bucket_name::${{ secrets.DEV_BUCKET_NAME }}"
             echo "::set-output name=cloudfront_id::${{ secrets.DEV_CLOUDFRONT_ID }}"
             echo "::set-output name=next_public_ui_base_url::https://esc-dev.energyweb.org"
+            echo "::set-output name=next_public_chain_id::73799"
+            echo "::set-output name=next_public_rpc_url::https://volta-rpc-vkn5r5zx4ke71f9hcu0c.energyweb.org/"
+            echo "::set-output name=next_public_cache_server::https://identitycache-dev.energyweb.org/v1"
+            echo "::set-output name=next_public_org_namespace::iam.ewc"
+            echo "::set-output name=next_public_network_name::EnergyWeb Volta Chain"
+            echo "::set-output name=next_public_currency_name::Volta Token"
+            echo "::set-output name=next_public_currency_symbol::VT"
+            echo "::set-output name=next_public_patron_role::email.roles.eea.apps.florin.engietestvolta.iam.ewc"
+            echo "::set-output name=next_public_patron_role_version::1"
+            echo "::set-output name=next_public_token_limit::200"
+            echo "::set-output name=next_public_global_token_limit::10000"
+            echo "::set-output name=next_public_interest_rate::10%"
+            echo "::set-output name=next_public_block_explorer_url::https://volta-explorer.energyweb.org"
+            echo "::set-output name=next_public_activate_staking_date::2022-03-30T12:00"
+            echo "::set-output name=next_public_close_staking_date::2022-03-30T12:15"
+            echo "::set-output name=next_public_lock_stakes_date::2022-03-30T12:20"
+            echo "::set-output name=next_public_release_rewards_date::2022-03-30T12:35"
+            echo "::set-output name=next_public_full_stop_date::2022-03-30T12:40"
+          if [ "${{ github.ref }}" = "refs/heads/develop" ]; then
+            echo "::set-output name=aws_access_key_id::${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}"
+            echo "::set-output name=aws_secret_key::${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}"
+            echo "::set-output name=aws_region::${{ secrets.AWS_REGION }}"
+            echo "::set-output name=bucket_name::${{ secrets.STAGING_BUCKET_NAME }}"
+            echo "::set-output name=cloudfront_id::${{ secrets.STAGING_CLOUDFRONT_ID }}"
+            echo "::set-output name=next_public_ui_base_url::https://esc-STAGING.energyweb.org"
             echo "::set-output name=next_public_chain_id::73799"
             echo "::set-output name=next_public_rpc_url::https://volta-rpc-vkn5r5zx4ke71f9hcu0c.energyweb.org/"
             echo "::set-output name=next_public_cache_server::https://identitycache-dev.energyweb.org/v1"
