--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -47,7 +47,7 @@ jobs:
             echo "::set-output name=next_public_lock_stakes_date::2022-03-30T12:20"
             echo "::set-output name=next_public_release_rewards_date::2022-03-30T12:35"
             echo "::set-output name=next_public_full_stop_date::2022-03-30T12:40"
-          if [ "${{ github.ref }}" = "refs/heads/DOI-1823_engie" ]; then
+          elif [ "${{ github.ref }}" = "refs/heads/DOI-1823_engie" ]; then
             echo "::set-output name=aws_access_key_id::${{ secrets.STAGING_AWS_ACCESS_KEY_ID }}"
             echo "::set-output name=aws_secret_key::${{ secrets.STAGING_AWS_SECRET_ACCESS_KEY }}"
             echo "::set-output name=aws_region::${{ secrets.AWS_REGION }}"
