--- a/.github/workflows/cf-deploy.yml
+++ b/.github/workflows/cf-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to bucket
 
 on:
   push:
-    branches: ['develop', 'master', 'release', 'ci/deployments', 'DOI-1823_engie']
+    branches: ['develop', 'master', 'release', 'ci/deployments']
 jobs:
   cancel-previous:
     name: 'Cancel Previous Runs'
