--- a/devops/esc-helm/values-sandbox.yaml
+++ b/devops/esc-helm/values-sandbox.yaml
@@ -46,11 +46,31 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+  ingress:
+  enabled: true
+  annotations:
+      kubernetes.io/ingress.class: alb
+      alb.ingress.kubernetes.io/scheme: internet-facing
+      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
+      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:124847487737:certificate/f80d54fd-0eba-4af3-aa12-fca51838f15b
   hosts:
-    - host: chart-example.local
+    - host: esc-sandbox.energyweb.org
       paths:
-        - path: /
-          pathType: ImplementationSpecific
+      - path: "/"
+        pathType: Prefix
+        backend:
+          service:
+            name: ssl-redirect
+            port:
+              name: use-annotation
+      - path: "/"
+        pathType: Prefix
+        backend:
+          service:
+            name: esc
+            port:
+              number: 8080
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
