engie-solar argo deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -83,3 +83,17 @@ jobs:
       - name: Logout of Amazon ECR
         if: always()
         run: docker logout ${{ steps.login-ecr.outputs.registry }}
+
+      - name: ArgoCD login
+        uses: clowdhaus/argo-cd-action/@v1.10.0
+        id: argocd_login
+        with:
+          command: login ${{ steps.env_vars.outputs.argocd_url }}
+          options: --insecure --password ${{ steps.env_vars.outputs.argocd_password }} --username ${{ steps.env_vars.outputs.argocd_username }}
+
+      - name: ArgoCD overvrite values.yaml
+        uses: clowdhaus/argo-cd-action/@v1.10.0
+        id: argocd_image_tag_overwrite
+        with:
+          command: app set rebeam
+          options: -p image.tag=${{ steps.tag_version.outputs.new_tag }}
