engie-solar argo deployment

--- a/devops/esc-helm/values-sandbox.yaml
+++ b/devops/esc-helm/values-sandbox.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: arn:aws:ecr:us-west-2:124847487737:repository/esc
+  repository: 124847487737.dkr.ecr.us-west-2.amazonaws.com/esc
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
