--- a/devops/esc-helm/values-sandbox.yaml
+++ b/devops/esc-helm/values-sandbox.yaml
@@ -100,3 +100,24 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+appValues:
+  NEXT_PUBLIC_UI_BASE_URL: https://esc-sandbox.energyweb.org
+  NEXT_PUBLIC_CHAIN_ID: 73799
+  NEXT_PUBLIC_RPC_URL: https://volta-rpc-vkn5r5zx4ke71f9hcu0c.energyweb.org/
+  NEXT_PUBLIC_CACHE_SERVER: https://identitycache-dev.energyweb.org/v1
+  NEXT_PUBLIC_ORG_NAMESPACE: iam.ewc
+  NEXT_PUBLIC_NETWORK_NAME: EnergyWeb Volta Chain
+  NEXT_PUBLIC_CURRENCY_NAME: Volta Token
+  NEXT_PUBLIC_CURRENCY_SYMBOL: VT
+  NEXT_PUBLIC_PATRON_ROLE: email.roles.eea.apps.florin.engietestvolta.iam.ewc
+  NEXT_PUBLIC_PATRON_ROLE_VERSION: 1
+  NEXT_PUBLIC_TOKEN_LIMIT: 200
+  NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT: 10000
+  NEXT_PUBLIC_INTEREST_RATE: 10%
+  NEXT_PUBLIC_BLOCK_EXPLORER_URL: https://volta-explorer.energyweb.org
+  NEXT_PUBLIC_ACTIVATE_STAKING_DATE: 2022-03-30T12:00
+  NEXT_PUBLIC_CLOSE_STAKING_DATE: 2022-03-30T12:15
+  NEXT_PUBLIC_LOCK_STAKES_DATE: 2022-03-30T12:20
+  NEXT_PUBLIC_RELEASE_REWARDS_DATE: 2022-03-30T12:35
+  NEXT_PUBLIC_FULL_STOP_DATE: 2022-03-30T12:40
