--- a/devops/esc-helm/values.yaml
+++ b/devops/esc-helm/values.yaml
@@ -80,3 +80,24 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+appValues:
+  NEXT_PUBLIC_UI_BASE_URL: https://esc.energyweb.org
+  NEXT_PUBLIC_CHAIN_ID: 246
+  NEXT_PUBLIC_RPC_URL: https://rpc.energyweb.org
+  NEXT_PUBLIC_CACHE_SERVER: https://identitycache.energyweb.org/v1
+  NEXT_PUBLIC_ORG_NAMESPACE: iam.ewc
+  NEXT_PUBLIC_NETWORK_NAME: EWC
+  NEXT_PUBLIC_CURRENCY_NAME: EWT
+  NEXT_PUBLIC_CURRENCY_SYMBOL: EWC
+  NEXT_PUBLIC_PATRON_ROLE: eeaapproved.roles.eea.apps.engie.auth.ewc
+  NEXT_PUBLIC_PATRON_ROLE_VERSION: 1
+  NEXT_PUBLIC_TOKEN_LIMIT: 200
+  NEXT_PUBLIC_GLOBAL_TOKEN_LIMIT: 10000
+  NEXT_PUBLIC_INTEREST_RATE: 10%
+  NEXT_PUBLIC_BLOCK_EXPLORER_URL: https://explorer.energyweb.org
+  NEXT_PUBLIC_ACTIVATE_STAKING_DATE: 2022-03-30T12:00
+  NEXT_PUBLIC_CLOSE_STAKING_DATE: 2022-03-30T12:15
+  NEXT_PUBLIC_LOCK_STAKES_DATE: 2022-03-30T12:20
+  NEXT_PUBLIC_RELEASE_REWARDS_DATE: 2022-03-30T12:35
+  NEXT_PUBLIC_FULL_STOP_DATE: 2022-03-30T12:40
