--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and deploy
 
 on:
   push:
-    branches: ['DOI-DOI-1823_engie']
+    branches: ['DOI-1823_engie']
   workflow_dispatch:
 
 jobs:
